<resources>
    <string name="app_name">Wireless Storage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Wireless Storage</string>
    <string name="nav_header_subtitle">Life on the air</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="about">About</string>
    <string name="tasks">Tasks</string>
    <string name="storage">Storage</string>
    <string name="home">Home</string>
    <string name="main_action_start">Start</string>
    <string name="devices">Devices</string>
    <string name="home_status_label">Stopped(Inactive)</string>
    <string name="home_address_label">Address:</string>
    <string name="home_network_label">Network:</string>
    <string name="home_password_label">Password:</string>
    <string name="pin">PIN</string>
    <string name="ssid">SSID</string>
    <string name="setting">Setting</string>
    <string name="add_storage">Add Storage</string>
    <string name="add_device">Add Device</string>

</resources>