<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
           android:id="@+id/home">
        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_home_dark"
                android:title="@string/home"/>
        <item
                android:id="@+id/nav_device"
                android:icon="@drawable/ic_device_dark"
                android:title="@string/devices"/>
    </group>

    <group android:checkableBehavior="single"
           android:id="@+id/service">
        <item
                android:id="@+id/nav_storage"
                android:icon="@drawable/ic_storage_dark"
                android:title="@string/storage"/>
        <item
                android:id="@+id/nav_task"
                android:icon="@drawable/ic_task_dark"
                android:title="@string/tasks"/>
    </group>

    <group android:checkableBehavior="single"
           android:id="@+id/config">
        <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_setting_dark"
                android:title="@string/setting"/>

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about_dark"
            android:title="@string/about"/>
    </group>

</menu>