<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/home_swipe_refresh">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
                android:layout_marginTop="12dp"
                android:layout_marginHorizontal="18dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

            <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/home_network_history_chart"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
                android:layout_marginTop="12dp"
                android:layout_marginHorizontal="18dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

            <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/home_memory_history_chart"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
                android:layout_marginTop="12dp"
                android:layout_marginHorizontal="18dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                <com.github.mikephil.charting.charts.PieChart
                        android:id="@+id/home_memory_usage"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"/>

                <com.github.mikephil.charting.charts.PieChart
                        android:id="@+id/home_disk_usage"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"/>
            </LinearLayout>



        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
                app:cardElevation="3dp"
                android:layout_marginHorizontal="18dp"
                android:layout_marginVertical="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="vertical">

                <LinearLayout android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:orientation="horizontal">
                    <ImageView
                            android:padding="6dp"
                            android:id="@+id/network_icon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_wifi_ap_dark"/>

                    <TextView android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:layout_gravity="center_vertical"
                              android:id="@+id/network_name"
                              android:gravity="center_vertical"
                              android:text="@string/ssid"/>

                    <TextView android:layout_width="0dp"
                              android:layout_weight="1"
                              android:layout_height="wrap_content"/>
                    <TextView android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:layout_gravity="center_vertical"
                              android:id="@+id/status_label"
                              android:gravity="center_vertical"
                              android:text="@string/home_status_label"/>

                    <ImageButton
                            android:paddingHorizontal="16dp"
                            android:layout_gravity="center_vertical"
                            android:gravity="center_vertical"
                            android:minHeight="0dp"
                            android:minWidth="0dp"
                            android:id="@+id/status_icon"
                            style="?attr/buttonBarButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:src="@drawable/ic_status_gray"/>


                </LinearLayout>

                <LinearLayout android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:orientation="horizontal">
                    <ImageView
                            android:padding="6dp"
                            android:id="@+id/pin_icon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_pin_dark"/>
                    <TextView android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:layout_gravity="center_vertical"
                              android:id="@+id/pin_label"
                              android:gravity="center_vertical"
                              android:text="@string/pin"/>
                </LinearLayout>

                <LinearLayout android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:orientation="horizontal">
                    <ImageView
                            android:padding="6dp"
                            android:id="@+id/device_icon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_device_count_dark"/>
                    <TextView android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:layout_gravity="center_vertical"
                              android:id="@+id/device_label"
                              android:gravity="center_vertical"
                              android:text="0 devices connected"/>
                    <TextView android:layout_width="0dp"
                              android:layout_weight="1"
                              android:layout_height="wrap_content"/>
                    <ImageButton
                            android:id="@+id/main_action"
                            android:minHeight="0dp"
                            android:minWidth="0dp"
                            style="?attr/buttonBarButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_play_dark"/>
                </LinearLayout>


            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>


</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>



























        <!--<androidx.cardview.widget.CardView-->
        <!--android:layout_margin="12dp"-->
        <!--android:padding="6dp"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--app:contentPadding="12dp">-->
        <!--<LinearLayout-->
        <!--        android:layout_width="match_parent"-->
        <!--        android:layout_height="wrap_content"-->
        <!--        android:orientation="horizontal">-->
        <!--    <TextView-->
        <!--            android:id="@+id/storage_label"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:text="Storage"-->
        <!--            android:layout_gravity="center_vertical"/>-->

        <!--    <ProgressBar-->
        <!--            android:paddingTop="3dp"-->
        <!--            android:paddingHorizontal="6dp"-->
        <!--            android:id="@+id/storage_usage"-->
        <!--            android:layout_weight="1"-->
        <!--            android:layout_width="0dp"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_gravity="center_vertical"-->
        <!--            style="@style/Widget.AppCompat.ProgressBar.Horizontal"/>-->

        <!--    <TextView-->
        <!--            android:id="@+id/storage_usage_label"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:text="60GB/128GB"-->
        <!--            android:layout_gravity="center_vertical"/>-->
        <!--</LinearLayout>-->
        <!--</androidx.cardview.widget.CardView>-->
